# deferred-decals

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/shader/: decals_fs.glsl  decals_vs.glsl  deferred_shading_fs.glsl  fullscreen_triangle_vs.glsl  g_buffer_fs.glsl  g_buffer_vs.glsl  mesh_vs.glsl
